# JB-RAG

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  objects.inv  pyproject.toml  requirements.txt  setup.py
api/evaluation/: index.html
api/preprocessing/: index.html
api/retriver/: index.html
api/scripts/: index.html
commands/: index.html
docs/: mkdocs.yml
docs/docs/: commands.md  getting-started.md  index.md
docs/docs/api/: evaluation.md  preprocessing.md  retriver.md  scripts.md
getting-started/: index.html
notebooks/: summary_data.ipynb
search/: search_index.json
src/: config.py  evaluate.py  knowledge_base_preparation.py  main.py
src/app_utils/: answer_summary.py
src/evaluation/: dataset.py  evaluator.py  experiments.py  hyperparameters_experiment.py  query_expansion_experiment.py  utils.py
src/output_summary/: data_extractor.py  synthezizer.py
src/preprocessing/: code_parser.py  embedding_generator.py  repo_loader.py  tree_sitter_setup.py  tree_sitter_splitter.py
src/retriever/: candidate_terms.py  faiss_search.py  query_expander.py
