[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jb-rag"
version = "0.1.0"
description = "Retrieval-Augmented Generation (RAG) system over a code repository for a question-answering task."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.10.0",
    "gitpython>=3.1.44",
    "mkdocs-material>=9.6.9",
    "mkdocstrings[python]>=0.29.0",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "optuna>=4.2.1",
    "sentence-transformers>=3.4.1",
    "setuptools>=76.0.0",
    "streamlit>=1.44.0",
    "wandb>=0.19.8",
    "transformers>=4.49.0",
    "bitsandbytes>=0.45.4",
    "accelerate>=1.5.2",
    "openai>=1.69.0",
    "dotenv>=0.9.9",
]

[flake8]
max-line-length = 100
